# rs-table2pgcopy

./: Cargo.toml  README.md  rs-table2pgcopy  run.sh
src/: lib.rs  main.rs
